// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer should handle GET_MODES_BY_DATE_INITIAL_DONE 1`] = `
Object {
  "isError": false,
  "isLoading": false,
  "posts": Array [
    Object {
      "__v": 0,
      "_id": "5d2f57294b9625238ce44575",
      "author": "5cf2a6fded450065969652b2",
      "createdAt": "2019-07-17T17:13:13.029Z",
      "favorites": 0,
      "points": 0,
      "tags": Array [],
      "thumbnail": "/path/to/default.img",
    },
    Object {
      "__v": 0,
      "_id": "5d2f58a24b9625238ce44577",
      "author": "5cf2a6fded450065969652b2",
      "createdAt": "2019-07-17T17:19:30.091Z",
      "favorites": 0,
      "points": 0,
      "tags": Array [],
      "thumbnail": "/path/to/default.img",
    },
  ],
}
`;

exports[`reducer should handle GET_MODES_BY_DATE_INITIAL_FAILED 1`] = `
Object {
  "error": Object {
    "Error": "TypeError: Failed to fetch",
  },
  "isError": true,
  "isLoading": false,
  "posts": Array [],
}
`;

exports[`reducer should handle GET_MODES_BY_DATE_INITIAL_REQUESTED 1`] = `
Object {
  "isError": false,
  "isLoading": true,
  "posts": Array [],
}
`;

exports[`reducer should return the initial state 1`] = `
Object {
  "isError": false,
  "isLoading": false,
  "posts": Array [],
}
`;
